refactor(workflow): 重构工作流答案获取逻辑以支持聊天记录ID
- 修改ChatPostHandler中answerText设为空字符串
- 更新ChatFlowServiceImpl调用getAnswers方法传入chatRecordId参数
- 在ChatResponse中实现答案按viewType分组返回
- 重构WorkflowOutputManager的getAnswers方法添加chatRecordId参数
- 调整AbsWorkflowHandler异常处理逻辑
- 更新FormNode、LoopNode、UserSelectNode的getAnswerList方法签名
- 重构LoopNode中的迭代答案构建方法添加chatRecordId参数
- 更新AbsNode基类getAnswerList方法传入chatRecordId参数
- 修改单元测试适配新的方法签名变化